@@ -1,5 +1,8 @@
 Changes with APR-util 0.9.2
 
+  *) Allow apr_queue to have greater than int number of elements.
+     [Justin Erenkrantz]
+
   *) Detect Berkeley DB 4.0 compiled with --with-uniquenames.
      [Philip Martin <philip@codematters.co.uk>]
 
